--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin layout test</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="metis-base/dist/metis-base.css">
+  <link rel="stylesheet" href="metis-base/dist/metis-base-theme.css">
   <link rel="stylesheet" href="metis-layout.css">
+  <link rel="stylesheet" href="metis-layout-theme.css">
 </head>
 
 <body>
@@ -16,23 +19,8 @@
       <p>
         TOP
       </p>
-
-      <button class="Sidebar-close" type="button" name="button">CLOSE</button>
-      <button class="Sidebar-open" type="button" name="button">OPEN</button>
-      <button class="Sidebar-toggle" type="button" name="button">TOGGLE</button>
     </header>
     <div class="Content">
-      <aside class="Sidebar">
-        <nav>
-          <ul>
-            <li><a href="#">item 1</a></li>
-            <li><a href="#">item 2</a></li>
-            <li><a href="#">item 3</a></li>
-            <li><a href="#">item 4</a></li>
-            <li><a href="#">item 5</a></li>
-          </ul>
-        </nav>
-      </aside>
       <section class="Main">
         MAIN
       </section>
@@ -42,8 +30,8 @@
     </footer>
   </div>
 
-  <script src="metis-layout.js">
-  </script>
+  <script src="metis-base/dist/metis-base.js"></script>
+  <script src="metis-layout.js"></script>
 </body>
 
 </html>
