--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="Content">
       <section class="Main">
-        MAIN
+          <p>MAIN</p>
       </section>
     </div>
     <footer class="Footer">
