uppercase all class name

--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
 </head>
 
 <body>
-  <div class="Wrap">
-    <header class="Top">
+  <div class="wrap">
+    <header class="top">
       <p>
-        TOP
+        tOP
       </p>
     </header>
-    <div class="Content">
-      <section class="Main">
+    <div class="content">
+      <section class="main">
           <p>MAIN</p>
       </section>
     </div>
-    <footer class="Footer">
+    <footer class="footer">
       FOOTER
     </footer>
   </div>
