--- a/public/l2.html
+++ b/public/l2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Admin layout test</title>
+  <title>Admin layout test 2</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="metis-base/dist/metis-base.css">
   <link rel="stylesheet" href="metis-base/dist/metis-base-theme.css">
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="wrap is-vertical">
+    <header class="top">
+      <p>
+        tOP
+      </p>
+    </header>
     <div class="content">
-      <header class="top">
-        <p>
-          tOP
-        </p>
-      </header>
       <section class="main">
           <p>MAIN</p>
       </section>
-      <footer class="footer">
-        FOOTER
-      </footer>
     </div>
+    <footer class="footer">
+      FOOTER
+    </footer>
   </div>
 
   <script src="metis-base/dist/metis-base.js"></script>
