--- a/public/l2.html
+++ b/public/l2.html
@@ -13,21 +13,18 @@
   <link rel="stylesheet" href="metis-layout-theme.css">
 </head>
 
-<body>
-  <div class="wrap is-vertical">
-    <header class="top">
-      <p>
-        tOP
-      </p>
-    </header>
-    <div class="content">
-      <section class="main">
-          <p>MAIN</p>
-      </section>
+<body class="layout-2">
+  <div class="wrap">
+  <aside class="sidebar">LEFT</aside>
+    <div class="main">
+      <div class="top">TOP</div>
+      <div class="content">
+        <div class="container-fluid">
+          CF
+        </div>
+      </div>
+      <div class="footer">Footer</div>
     </div>
-    <footer class="footer">
-      FOOTER
-    </footer>
   </div>
 
   <script src="metis-base/dist/metis-base.js"></script>
