create test pages  Changes to be committed: 	modified:   index.html 	new file:   l1.html 	new file:   l2.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <a href="https://github.com/metisadmin/metis-layout" class="btn">View on GitHub</a>
       <a href="https://github.com/metisadmin/metis-layout/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/metisadmin/metis-layout/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="l1.html" class="btn">Layout test 1</a>
+      <a href="l2.html" class="btn">Layout test 2</a>
     </section>
 
     <section class="main-content">
@@ -65,4 +67,3 @@
 
   </body>
 </html>
-
