fixed mime/type  Changes to be committed: 	modified:   l1.html 	modified:   l2.html

--- a/l2.html
+++ b/l2.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin layout test 2</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base-theme.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout-theme.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base-theme.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout-theme.css">
 </head>
 
 <body class="layout-2">
@@ -32,8 +32,8 @@
     </div>
   </div>
 
-  <script src="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base.js"></script>
-  <script src="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout.js"></script>
+  <script src="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base.js"></script>
+  <script src="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout.js"></script>
 
   <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
