--- a/l1.html
+++ b/l1.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin layout test</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base-theme.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout-theme.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base-theme.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout.css">
+  <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout-theme.css">
 </head>
 
 <body>
@@ -83,8 +83,8 @@
     <div class="footer">Footer</div>
   </div>
 
-  <script src="https://raw.githubusercontent.com/metisadmin/metis-base/master/dist/metis-base.js"></script>
-  <script src="https://raw.githubusercontent.com/metisadmin/metis-layout/master/dist/metis-layout.js"></script>
+  <script src="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base.js"></script>
+  <script src="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout.js"></script>
   <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
