--- a/l1.html
+++ b/l1.html
@@ -11,6 +11,16 @@
   <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-base/master/dist/metis-base-theme.css">
   <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout.css">
   <link rel="stylesheet" href="https://rawgit.com/metisadmin/metis-layout/master/dist/metis-layout-theme.css">
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-1669764-18', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
