--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin layout test</title>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" href="normalize-css/normalize.css">
   <link rel="stylesheet" href="metis-base/dist/metis-base.css">
   <link rel="stylesheet" href="metis-base/dist/metis-base-theme.css">
   <link rel="stylesheet" href="metis-layout.css">
@@ -78,6 +78,7 @@
     <div class="footer">Footer</div>
   </div>
 
+  <script src="jquery/dist/jquery.js" charset="utf-8"></script>
   <script src="metis-base/dist/metis-base.js"></script>
   <script src="metis-layout.js"></script>
 </body>
